init weather service and added /home

--- a/state-auto/src/app/app.component.html
+++ b/state-auto/src/app/app.component.html
@@ -1,10 +1,3 @@
-<span>Welcome to {{ title }}</span>
 
-<p>Enter your Address to get started:</p>
-
-<input type="text" placeholder="Enter Address">
-
-<input type="button" value="Submit" onclick="msg()">
-
-
-<p>footer</p>
+<!-- TODO add menu html here -->
+<router-outlet></router-outlet>
