weather page component

--- a/state-auto/src/app/main-page/main-page.component.html
+++ b/state-auto/src/app/main-page/main-page.component.html
@@ -2,7 +2,7 @@
  
 <p>Enter your Address to get started:</p>
 
-<input type="text" [(ngModel)]="city" placeholder="Enter city">
+<input id="city" type="text" [(ngModel)]="city" placeholder="Enter city">
 
 <input type="button" value="Submit" (click)="getWeather()">
 
