--- a/state-auto/src/app/main-page/main-page.component.html
+++ b/state-auto/src/app/main-page/main-page.component.html
@@ -6,7 +6,7 @@
     <div class="topnav">
 
         <div class="topnav-centered">
-          <a href="logo" class="active"><img src="../../../Images/placeholder.com-logo3.jpg" alt="image of our logo"></a>
+          <a href="" class="active"><img src="../../../Images/placeholder.com-logo3.jpg" alt="image of our logo"></a>
         </div>
     
         <div class="topnav-left">
