woroking on chart for crime & nav bar

--- a/state-auto/src/app/crime/crime.component.html
+++ b/state-auto/src/app/crime/crime.component.html
@@ -6,3 +6,4 @@
         
 <input type="button" value="Submit" (click)="getCrime()">
        
+<div id="chartDiv" style="width:50%; height:300px; margin:0 auto;"></div>
