--- a/state-auto/src/app/app.component.html
+++ b/state-auto/src/app/app.component.html
@@ -1,3 +1,28 @@
 
 <!-- TODO add menu html here -->
-<router-outlet></router-outlet>
+<h1>HET PATEL BOIS</h1>
+
+<div id="content">
+    <div id = "backgroundDiv"></div>
+    <div class="topnav">
+
+        <div class="topnav-centered">
+          <a href="" class="active"><img src="../../../Images/placeholder.com-logo3.jpg" alt="image of our logo"></a>
+        </div>
+    
+        <div class="topnav-left">
+            <a href="crime">Crime</a>
+            <a href="weather">Weather</a>
+          </div>
+        
+    
+        <div class="topnav-right">
+          <a href="compare">Compare</a>
+          <a href="about">About</a>
+        </div>
+      
+      </div>
+      <router-outlet></router-outlet>
+
+</div>
+
