--- a/state-auto/src/app/weather/weather.component.html
+++ b/state-auto/src/app/weather/weather.component.html
@@ -1,7 +1,7 @@
 <p>weather works!</p>
 
-<input id="lat" type="text" [(ngModel)]="lat" placeholder="Enter lat">
-<input id="long" type="text" [(ngModel)]="long" placeholder="Enter long">
+<input id="latitude" type="text" [(ngModel)]="latitude" placeholder="Enter lat">
+<input id="longitude" type="text" [(ngModel)]="longitude" placeholder="Enter long">
 <input type="button" value="Submit" (click)="getAirQuality()">
 
 
