fixed lat and long

--- a/state-auto/src/app/app.component.html
+++ b/state-auto/src/app/app.component.html
@@ -1,13 +1,12 @@
 
 <!-- TODO add menu html here -->
-<h1>HET PATEL BOIS</h1>
 
 <div id="content">
     <div id = "backgroundDiv"></div>
     <div class="topnav">
 
         <div class="topnav-centered">
-          <a href="" class="active"><img src="../../../Images/placeholder.com-logo3.jpg" alt="image of our logo"></a>
+          <a href=""><img id = "logoImg"alt="logo" src="https://placeholder.com/wp-content/uploads/2018/10/placeholder.com-logo1.jpg"width="200" height="45"></a>
         </div>
     
         <div class="topnav-left">
