--- a/state-auto/src/app/weather/weather.component.html
+++ b/state-auto/src/app/weather/weather.component.html
@@ -1,9 +1,9 @@
 <p>weather works!</p>
-
+<!-- 
 <input id="latitude" type="text" [(ngModel)]="latitude" placeholder="Enter lat">
 <input id="longitude" type="text" [(ngModel)]="longitude" placeholder="Enter long">
 <input type="button" value="Submit" (click)="getAirQuality()">
-
-<input id="city" type="text" [(ngModel)]="city" placeholder="Enter city">
-<input id="state" type="text" [(ngModel)]="state" placeholder="Enter state">
+-->
+<input id="city" type="text"  placeholder="Enter city">
+<input id="state" type="text"  placeholder="Enter state">
 <input type="button" value="Submit" (click)="getLatLongByCityState()">
