refactor & tables module

--- a/state-auto/src/app/app.component.html
+++ b/state-auto/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="topnav">
 
         <div class="topnav-centered">
-          <a href=""><img alt="logo" src="../../Images/PropertyHLogo.png" width="200" height="45"></a>
+          <a href=""><img alt="logo" type="image/x-icon" src="../../Images/PropertyHLogo.png" style="width: 200; height:45"></a>
         </div>
     
         <div class="topnav-left">
