--- a/state-auto/src/app/crime/crime.component.html
+++ b/state-auto/src/app/crime/crime.component.html
@@ -6,4 +6,4 @@
         
 <input type="button" value="Submit" (click)="getCrime()">
        
-<div id="chartDiv" style="width:50%; height:300px; margin:0 auto;"></div>
+<div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div>
