--- a/state-auto/src/app/main-page/main-page.component.html
+++ b/state-auto/src/app/main-page/main-page.component.html
@@ -10,6 +10,8 @@
 
     <input type="button" value="Submit" (click)="getWeather()">
 
+    <img src="../../../Images/FinalBodyImg.png" width = "100px" height ="200px" >
+
     <div *ngIf='currentWeather'>
 
         <p>Country: {{currentWeather.location.country}}</p>
